# TEQUILA

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPLIANCE_AUDIT.md  DATA_STRUCTURE_BUG_FIXED.md  FRONTEND_INTEGRATION.md  GEN_COMMAND.md  LICENSE  Makefile  QUICKSTART.md  README.md  REFACTOR_PATCH.diff  SUMMARY_FIX_COMPLETE.md  SYSTEM_CHANGES.md  TEQUILA_7FIELD_MIGRATION.patch  VIEW_COMMAND.md  commit_data_structure_fix.sh  commit_fixes.sh  commit_summary_fix.sh  create_internal_documents.py  import_sample_weeks.py  pyproject.toml  setup_frontend.sh  test_day1.py
.github/workflows/: ci.yml
curriculum/: curriculum_outline.json
curriculum/usage/: summary.json
dev_docs/: gpt_convo_1.md
frontend/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: index.css  index.tsx
logs/: README.md
logs/invalid_responses/: Week01_Day1_summary_v1_20251015_140743_INVALID.json  Week01_Day1_summary_v2_20251015_140754_INVALID.json  Week01_Day1_summary_v3_20251015_140807_INVALID.json  Week01_Day1_summary_v4_20251015_140823_INVALID.json  Week01_Day1_summary_v5_20251015_140833_INVALID.json  Week01_Day1_summary_v6_20251015_140842_INVALID.json  Week01_Day1_summary_v7_20251015_140853_INVALID.json  Week02_Day1_document_v10_20251016_165456_INVALID.json  Week02_Day1_document_v1_20251016_165250_INVALID.json  Week02_Day1_document_v2_20251016_165303_INVALID.json  (+8 more)
src/: app.py  config.py
src/cli/: gen.py  (+9 more)
tests/: test_7field_migration.py  test_generation_pipeline.py  test_llm_client.py  test_prompts.py
(+634 files in other folders)
